--- a/src/App.css
+++ b/src/App.css
@@ -5,18 +5,18 @@
   width: 300px;
   background: #e0e0e0;
   box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
   -webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 9px 10px 5px 0px rgba(0, 0, 0, 0.75);
 }
 
-.login-img {
-  height: 80px;
-  width: 100px;
-}
 .form {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+.login-img {
+  height: 80px;
+  width: 100px;
 }
 button {
   font-size: 18px;
@@ -30,12 +30,16 @@ button {
   color: #fff;
   height: 40px;
   width: 100px;
-  text-shadow: 0 1px 0 rgb(0 0 0 / 40%);
+  text-shadow: 0 1px 0 rgb(0 0 0 /40%);
   transition: box-shadow 0.15s ease, transform 0.15s ease;
 }
 
 button:hover {
-  box-shadow: 0px 1.6px 3.2px rgb(45 35 66 / 40%),
-    0px 6.4px 11.4px -1.6px rgb(45 35 66 / 30%), inset 0px -1.6px 0px #3c4fe0;
+  box-shadow: 0px 1.6px 3.2px rgb(45, 35, 66 / 40%),
+    0px 6.4px 11.4px -1.6px rgb(45, 35, 66 /30%), inset 0px -1.6px 0px #3c4fe0;
+  -webkit-box-shadow: 0px 1.6px 3.2px rgb(45, 35, 66 / 40%),
+    0px 6.4px 11.4px -1.6px rgb(45, 35, 66 /30%), inset 0px -1.6px 0px #3c4fe0;
+  -moz-box-shadow: 0px 1.6px 3.2px rgb(45, 35, 66 / 40%),
+    0px 6.4px 11.4px -1.6px rgb(45, 35, 66 /30%), inset 0px -1.6px 0px #3c4fe0;
   transform: translateY(-1.6px);
 }
